tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `False: DiscriminantInRange` is not satisfied
  --> $DIR/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `False`
   | 
  ::: $DIR/src/checks.rs:94:50
   |
94 |     <Self::CheckType as DispatchTrueFalse>::Out: DiscriminantInRange,
   |                                                  ------------------- required by this bound in `CheckDiscriminantInRange`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `modular-bitfield-tests`
